--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -589,48 +589,6 @@ block_distribution <- slot_data_prc_tbl %>%
   mutate(MSHS = "MSHS") 
 
 
-past_block_distribution <- block_distribution %>%
-  filter(year(SLOT_BEGIN_TIME) == current_year) %>%
-  filter(SLOT_BEGIN_TIME <= TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
-  group_by(MSHS, SITE, DEPT_SPECIALTY_NAME, DEPARTMENT_ID, DEPARTMENT_NAME, PROV_ID, PROV_NM_WID, PROV_TYPE, ACTIVE_STATUS,
-           slot_year, slot_month) %>%
-  summarise(avail_hour = sum(REG_AVAIL_MIN, na.rm = T)/60,
-            sched_hour = sum(SCHED_MIN, na.rm = T)/60,
-            arrived_hour = sum(ARRIVED_MIN, na.rm = T)/60,
-            avail_hour_new = sum(REG_AVAIL_MIN[BLOCK_NEW_YN == 1])/60,
-            sched_hour_new = sum(SCHED_MIN[BLOCK_NEW_YN == 1], na.rm = T)/60,
-            arrived_hour_new = sum(ARRIVED_MIN[BLOCK_NEW_YN == 1], na.rm = T)/60,
-            avail_hour_release = sum(REG_AVAIL_MIN[BLOCK_RELEASE_ALL_YN == 1])/60,
-            sched_hour_release = sum(SCHED_MIN[BLOCK_RELEASE_ALL_YN == 1], na.rm = T)/60,
-            arrived_hour_release = sum(ARRIVED_MIN[BLOCK_RELEASE_ALL_YN == 1], na.rm = T)/60,
-            avail_hour_other = sum(REG_AVAIL_MIN[BLOCK_OTHER_YN == 1])/60,
-            sched_hour_other = sum(SCHED_MIN[BLOCK_OTHER_YN == 1], na.rm = T)/60,
-            arrived_hour_other = sum(ARRIVED_MIN[BLOCK_OTHER_YN == 1], na.rm = T)/60,
-            reg_openings = sum(REG_AVAIL_OPENINGS),
-            reg_openings_new_release = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1 | BLOCK_NEW_YN == 1]),
-            reg_openings_release_all = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1]),
-            reg_openings_release = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_YN == 1]),
-            reg_openings_new_normal = sum(REG_AVAIL_OPENINGS[BLOCK_NEW_YN == 1 & BLOCK_RELEASE_ALL_YN == 0 & BLOCK_OTHER_YN == 0]),
-            reg_openings_new_combination = sum(REG_AVAIL_OPENINGS[BLOCK_NEW_YN == 1 & (BLOCK_RELEASE_ALL_YN == 1 | BLOCK_OTHER_YN == 1)]),
-            reg_openings_release_normal = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1 & BLOCK_NEW_YN == 0 & BLOCK_OTHER_YN == 0]),
-            reg_openings_release_combination = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1 & (BLOCK_NEW_YN == 1 | BLOCK_OTHER_YN == 1)])) %>%
-  collect()
-
-
-past_block_distribution <- past_block_distribution %>%
-  mutate(perc_reg_openings_new_release = case_when(reg_openings == 0 | is.na(reg_openings) ~ 0, TRUE ~ reg_openings_new_release/reg_openings),
-         perc_release_all = case_when(reg_openings_new_release == 0 | is.na(reg_openings_new_release) ~ 0, TRUE ~ reg_openings_release_all/reg_openings_new_release),
-         perc_release = case_when(reg_openings_new_release == 0 | is.na(reg_openings_new_release) ~ 0, TRUE ~ reg_openings_release/reg_openings_new_release)) %>%
-  mutate(prov_util = case_when(avail_hour == 0 | is.na(avail_hour) ~ 0, TRUE ~ arrived_hour/avail_hour),
-         prov_util_new = case_when(avail_hour_new == 0 | is.na(avail_hour_new) ~ 0, TRUE ~ arrived_hour_new/avail_hour_new),
-         prov_util_release = case_when(avail_hour_release == 0 | is.na(avail_hour_release) ~ 0, TRUE ~ arrived_hour_release/avail_hour_release),
-         prov_util_other = case_when(avail_hour_other == 0 | is.na(avail_hour_other) ~ 0, TRUE ~ arrived_hour_other/avail_hour_other)) %>%
-  filter(prov_util >=0.35 & prov_util <=2.0) %>%
-  mutate(slot_year_month = as.character(paste0(slot_year, "-", ifelse(nchar(slot_month)==1,paste0("0",slot_month), slot_month))),
-           slot_month = as.numeric(slot_month))  %>%
-  relocate(slot_year_month, .after = slot_month)
-
-
 future_block_distribution <- block_distribution %>%
   # filter(year(SLOT_BEGIN_TIME) == current_year) %>%
   filter(SLOT_BEGIN_TIME >= TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
@@ -668,6 +626,48 @@ future_block_distribution <- past_block_distribution %>%
   #        prov_util_release = case_when(avail_hour_release == 0 | is.na(avail_hour_release) ~ 0, TRUE ~ arrived_hour_release/avail_hour_release),
   #        prov_util_other = case_when(avail_hour_other == 0 | is.na(avail_hour_other) ~ 0, TRUE ~ arrived_hour_other/avail_hour_other)) %>%
   # filter(prov_util >=0.35 & prov_util <=2.0) %>%
+  mutate(slot_year_month = as.character(paste0(slot_year, "-", ifelse(nchar(slot_month)==1,paste0("0",slot_month), slot_month))),
+           slot_month = as.numeric(slot_month))  %>%
+  relocate(slot_year_month, .after = slot_month)
+
+
+past_block_distribution <- block_distribution %>%
+  filter(year(SLOT_BEGIN_TIME) == current_year) %>%
+  filter(SLOT_BEGIN_TIME <= TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
+  group_by(MSHS, SITE, DEPT_SPECIALTY_NAME, DEPARTMENT_ID, DEPARTMENT_NAME, PROV_ID, PROV_NM_WID, PROV_TYPE, ACTIVE_STATUS,
+           slot_year, slot_month) %>%
+  summarise(avail_hour = sum(REG_AVAIL_MIN, na.rm = T)/60,
+            sched_hour = sum(SCHED_MIN, na.rm = T)/60,
+            arrived_hour = sum(ARRIVED_MIN, na.rm = T)/60,
+            avail_hour_new = sum(REG_AVAIL_MIN[BLOCK_NEW_YN == 1])/60,
+            sched_hour_new = sum(SCHED_MIN[BLOCK_NEW_YN == 1], na.rm = T)/60,
+            arrived_hour_new = sum(ARRIVED_MIN[BLOCK_NEW_YN == 1], na.rm = T)/60,
+            avail_hour_release = sum(REG_AVAIL_MIN[BLOCK_RELEASE_ALL_YN == 1])/60,
+            sched_hour_release = sum(SCHED_MIN[BLOCK_RELEASE_ALL_YN == 1], na.rm = T)/60,
+            arrived_hour_release = sum(ARRIVED_MIN[BLOCK_RELEASE_ALL_YN == 1], na.rm = T)/60,
+            avail_hour_other = sum(REG_AVAIL_MIN[BLOCK_OTHER_YN == 1])/60,
+            sched_hour_other = sum(SCHED_MIN[BLOCK_OTHER_YN == 1], na.rm = T)/60,
+            arrived_hour_other = sum(ARRIVED_MIN[BLOCK_OTHER_YN == 1], na.rm = T)/60,
+            reg_openings = sum(REG_AVAIL_OPENINGS),
+            reg_openings_new_release = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1 | BLOCK_NEW_YN == 1]),
+            reg_openings_release_all = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1]),
+            reg_openings_release = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_YN == 1]),
+            reg_openings_new_normal = sum(REG_AVAIL_OPENINGS[BLOCK_NEW_YN == 1 & BLOCK_RELEASE_ALL_YN == 0 & BLOCK_OTHER_YN == 0]),
+            reg_openings_new_combination = sum(REG_AVAIL_OPENINGS[BLOCK_NEW_YN == 1 & (BLOCK_RELEASE_ALL_YN == 1 | BLOCK_OTHER_YN == 1)]),
+            reg_openings_release_normal = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1 & BLOCK_NEW_YN == 0 & BLOCK_OTHER_YN == 0]),
+            reg_openings_release_combination = sum(REG_AVAIL_OPENINGS[BLOCK_RELEASE_ALL_YN == 1 & (BLOCK_NEW_YN == 1 | BLOCK_OTHER_YN == 1)])) %>%
+  collect()
+
+
+past_block_distribution <- past_block_distribution %>%
+  mutate(perc_reg_openings_new_release = case_when(reg_openings == 0 | is.na(reg_openings) ~ 0, TRUE ~ reg_openings_new_release/reg_openings),
+         perc_release_all = case_when(reg_openings_new_release == 0 | is.na(reg_openings_new_release) ~ 0, TRUE ~ reg_openings_release_all/reg_openings_new_release),
+         perc_release = case_when(reg_openings_new_release == 0 | is.na(reg_openings_new_release) ~ 0, TRUE ~ reg_openings_release/reg_openings_new_release)) %>%
+  mutate(prov_util = case_when(avail_hour == 0 | is.na(avail_hour) ~ 0, TRUE ~ arrived_hour/avail_hour),
+         prov_util_new = case_when(avail_hour_new == 0 | is.na(avail_hour_new) ~ 0, TRUE ~ arrived_hour_new/avail_hour_new),
+         prov_util_release = case_when(avail_hour_release == 0 | is.na(avail_hour_release) ~ 0, TRUE ~ arrived_hour_release/avail_hour_release),
+         prov_util_other = case_when(avail_hour_other == 0 | is.na(avail_hour_other) ~ 0, TRUE ~ arrived_hour_other/avail_hour_other)) %>%
+  filter(prov_util >=0.35 & prov_util <=2.0) %>%
   mutate(slot_year_month = as.character(paste0(slot_year, "-", ifelse(nchar(slot_month)==1,paste0("0",slot_month), slot_month))),
            slot_month = as.numeric(slot_month))  %>%
   relocate(slot_year_month, .after = slot_month)
@@ -1090,10 +1090,10 @@ reactable(
              headerStyle = list(background = "#00aeef", color = "white", fontSize = "15px")),
     colGroup(name = paste0("Late-Releasing New Openings"),
              columns = c("reg_openings_release_normal", "reg_openings_release_combination", "perc_release_all", "perc_release"),
-             headerStyle = list(background = "#d80b8c", color = "white", fontSize = "15px")),
-  colGroup(name = paste0("Provider Utilization**"),
-             columns = c("prov_util", "prov_util_new", "prov_util_release", "prov_util_other"),
-           headerStyle = list(background = "#7f7f7f", color = "white", fontSize = "15px"))
+             headerStyle = list(background = "#d80b8c", color = "white", fontSize = "15px"))
+  # colGroup(name = paste0("Provider Utilization**"),
+  #            columns = c("prov_util", "prov_util_new", "prov_util_release", "prov_util_other"),
+  #          headerStyle = list(background = "#7f7f7f", color = "white", fontSize = "15px"))
     ),
   
   columns = list(
@@ -1219,24 +1219,6 @@ reactable(
       format = colFormat(percent = TRUE, digits = 1)
     ),
     
-    
-    prov_util = colDef(
-      name = "All Blocks",
-      maxWidth = 100,
-      headerStyle = list(background = "#7f7f7f", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      # Calculate the aggregate conversion rate as `(total-pending) / total`
-      aggregate = JS("function(values, rows) {
-        let totalavail_hour = 0
-        let totalarrived_hour = 0
-        rows.forEach(function(row) {
-          totalavail_hour += row['avail_hour']
-          totalarrived_hour += row['arrived_hour']
-        })
-        return (totalarrived_hour) / (totalavail_hour) || '-'
-      }"),
-      format = colFormat(percent = TRUE, digits = 1)
-    ),
-
     PROV_ID = colDef(show =F),
     DEPARTMENT_ID = colDef(show =F),
     slot_year = colDef(show =F),
