--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -581,14 +581,15 @@ block_distribution <- slot_data_prc_tbl %>%
               dplyr::select(SITE, SPECIALTY, DEPARTMENT_ID) %>%
               rename("DEPT_SPECIALTY_NAME" = SPECIALTY),
             copy = T) %>%
+  filter(is.na(SITE) | SITE %in% c("NETWORK", "MSH-MSDFP", "MSUS", "MSDMG", "MSBI", "MSW", "MSM", "MSH- AMBULATORY CARE", "NYEE", "MSQ", "MSSN", "MSB")) %>%
   mutate(slot_year = year(SLOT_BEGIN_TIME),
          slot_month = month(SLOT_BEGIN_TIME)) %>%
-  mutate(MSHS = "MSHS") 
+  mutate(MSHS = "MSHS")
+  
 
 
 
 future_block_distribution <- block_distribution %>%
-  # filter(year(SLOT_BEGIN_TIME) == current_year) %>%
   filter(SLOT_BEGIN_TIME >= TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
   group_by(MSHS, SITE, DEPT_SPECIALTY_NAME, DEPARTMENT_ID, DEPARTMENT_NAME, PROV_ID, PROV_NM_WID, PROV_TYPE, ACTIVE_STATUS,
            slot_year, slot_month) %>%
@@ -706,6 +707,7 @@ block_error <- slot_data_prc_tbl %>%
               dplyr::select(SITE, SPECIALTY, DEPARTMENT_ID) %>%
               rename("DEPT_SPECIALTY_NAME" = SPECIALTY),
             copy = T) %>%
+  filter(is.na(SITE) | SITE %in% c("NETWORK", "MSH-MSDFP", "MSUS", "MSDMG", "MSBI", "MSW", "MSM", "MSH- AMBULATORY CARE", "NYEE", "MSQ", "MSSN", "MSB")) %>%
   mutate(slot_year = year(SLOT_BEGIN_TIME),
          slot_month = month(SLOT_BEGIN_TIME)) %>%
   mutate(slot_date = sql("TRUNC(SLOT_BEGIN_TIME)"),
@@ -713,7 +715,7 @@ block_error <- slot_data_prc_tbl %>%
          slot_day_num = sql("TO_CHAR(SLOT_BEGIN_TIME, 'D')"),
          slot_day = sql("TO_CHAR(SLOT_BEGIN_TIME, 'DY')")) %>%
   mutate(MSHS = "MSHS") %>%
-  mutate(incorrect_blocks = BLOCK_RELEASE_ALL_YN + BLOCK_NEW_YN + BLOCK_OTHER_YN)
+  mutate(incorrect_blocks = BLOCK_RELEASE_ALL_YN + BLOCK_NEW_YN + BLOCK_OTHER_YN) 
 
 
 block_error <- block_error %>%
@@ -767,6 +769,7 @@ open_slots <- slot_data_prc_tbl %>%
               dplyr::select(SITE, SPECIALTY, DEPARTMENT_ID) %>%
               rename("DEPT_SPECIALTY_NAME" = SPECIALTY),
             copy = T) %>%
+  filter(is.na(SITE) | SITE %in% c("NETWORK", "MSH-MSDFP", "MSUS", "MSDMG", "MSBI", "MSW", "MSM", "MSH- AMBULATORY CARE", "NYEE", "MSQ", "MSSN", "MSB")) %>%
   mutate(slot_year = year(SLOT_BEGIN_TIME),
          slot_month = month(SLOT_BEGIN_TIME)) %>%
   mutate(slot_date = sql("TRUNC(SLOT_BEGIN_TIME)"),
@@ -865,7 +868,7 @@ reactable(
     wrap = TRUE,
   searchable = TRUE,
 
-  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_TYPE"),
+  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_NM_WID"),
   
   columnGroups = list(
     colGroup(name = "", columns = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_NM_WID", "PROV_TYPE", "ACTIVE_STATUS", "slot_year_month"),
@@ -1075,7 +1078,7 @@ reactable(
     wrap = TRUE,
   searchable = TRUE,
 
-  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_TYPE"),
+  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_NM_WID"),
   
   columnGroups = list(
     colGroup(name = "", columns = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_NM_WID", "PROV_TYPE", "ACTIVE_STATUS", "slot_year_month"),
@@ -1289,7 +1292,7 @@ reactable(
     wrap = TRUE,
   searchable = TRUE,
 
-  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_TYPE"),
+  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_TYPE", "PROV_NM_WID"),
   
   columnGroups = list(
     colGroup(name = "", columns = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_NM_WID", "PROV_TYPE", "ACTIVE_STATUS", "slot_year_month"),
@@ -1572,7 +1575,7 @@ reactable(
     wrap = TRUE,
   searchable = TRUE,
 
-  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_TYPE"),
+  groupBy = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_TYPE", "PROV_NM_WID"),
   
   columnGroups = list(
     colGroup(name = "", columns = c("MSHS", "SITE", "DEPT_SPECIALTY_NAME", "DEPARTMENT_NAME", "PROV_NM_WID", "PROV_TYPE", "ACTIVE_STATUS", "slot_year_month"),
